--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="container">
           <!--Begin main content-->
           <section>
-            <h2>Web designer</h2>
+            <h2>Designer</h2>
             <div class="row">
               <div class="col-6">
                 <p>I have skills in:</p>
