Added a link to my twitter profile.

--- a/projects/vector-graphics-foo.html
+++ b/projects/vector-graphics-foo.html
@@ -73,6 +73,7 @@
           <li><a href="mailto:contact@rosanna.co.nz"><span class="fa fa-envelope fa-3x"></span><span class="sr-only">Email: contact@rosanna.co.nz</span></a></li>
           <li><a href="http://nz.linkedin.com/pub/rosanna-fong/37/ab6/201"><span class="fa fa-linkedin-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's LinkedIn profile.</span></a></li>
           <li><a href="https://github.com/rosannafong"><span class="fa fa-github-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's GitHub profile.</span></a></li>
+          <li><a href="https://twitter.com/rosanna_fong"><span class="fa fa-twitter-square fa-3x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's Twitter profile.</span></a></li>
         </ul>
       </div>
     </div>
