Added DailyUI project.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
           <section>
             <div class="row">
               <div class="col-6">
+                <a href="projects/daily-ui.html" class="outer-box">
+                  <img src="images/project-thumbs/daily-ui-thumb.png" onerror="this.src='images/project-thumbs/daily-ui-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Daily UI Challenge."/>
+                  <div class="caption">
+                    <p class="bigger">Daily UI</p>
+                    <p>100 days of designing user interfaces.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Visual design</span></li>
+                      <li><span class="label">User interface design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about the Horowhenua Honey Co website.</span></p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-6">
                 <a href="projects/horowhenua-honey-co.html" class="outer-box">
                   <img src="images/project-thumbs/horowhenua-honey-co-thumb.png" onerror="this.src='images/project-thumbs/horowhenua-honey-co-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Horowhenua Honey Co website."/>
                   <div class="caption">
@@ -61,6 +77,8 @@
                   </div>
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col-6">
                 <a href="projects/shopping-list-app.html" class="outer-box">
                   <img src="images/project-thumbs/shopping-list-app-thumb.png" onerror="this.src='images/project-thumbs/shopping-list-app-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Shopping list app."/>
@@ -77,8 +95,6 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row">
               <div class="col-6">
                 <a href="projects/heat-pump-controller.html" class="outer-box">
                   <img src="images/project-thumbs/heat-pump-controller-thumb.png" onerror="this.src='images/project-thumbs/heat-pump-controller-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for the Heat pump Controller."/>
@@ -93,22 +109,6 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about the Heat pump Controller.</span></p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6">
-                <a href="projects/branding.html" class="outer-box">
-                  <img src="images/project-thumbs/branding-thumb.png" onerror="this.src='images/project-thumbs/branding-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Personal branding."/>
-                  <div class="caption">
-                    <p class="bigger">Personal branding</p>
-                    <p>My personal brand development.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Branding</span></li>
-                      <li><span class="label">Graphic design</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Personal Branding.</span></p>
                   </div>
                 </a>
               </div>
@@ -132,6 +132,24 @@
                 </a>
               </div>
               <div class="col-6">
+                <a href="projects/branding.html" class="outer-box">
+                  <img src="images/project-thumbs/branding-thumb.png" onerror="this.src='images/project-thumbs/branding-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Personal branding."/>
+                  <div class="caption">
+                    <p class="bigger">Personal branding</p>
+                    <p>My personal brand development.</p>
+                    <ul class="inline-list">
+                      <li><span class="label">Branding</span></li>
+                      <li><span class="label">Graphic design</span></li>
+                    </ul>
+                  </div>
+                  <div class="overlay">
+                    <p><span class="sr-only">Find out more about Personal Branding.</span></p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
                 <a href="projects/css-sheep.html" class="outer-box">
                   <img src="images/project-thumbs/css-sheep-thumb.png" onerror="this.src='images/project-thumbs/css-sheep-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for CSS3 sheep animation."/>
                   <div class="caption">
@@ -146,8 +164,6 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row">
               <div class="col-6">
                 <a href="projects/vector-graphics-foo.html" class="outer-box">
                   <img src="images/project-thumbs/vector-art-thumb.png" onerror="this.src='images/project-thumbs/vector-art-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Vector Graphics Foo."/>
@@ -160,22 +176,6 @@
                   </div>
                   <div class="overlay">
                     <p><span class="sr-only">Find out more about Vector Graphics Foo.</span></p>
-                  </div>
-                </a>
-              </div>
-              <div class="col-6">
-                <a href="projects/restaurant88.html" class="outer-box">
-                  <img src="images/project-thumbs/restaurant88-thumb.png" onerror="this.src='images/project-thumbs/restaurant88-thumb.jpg'; this.onerror=null;" class="img-responsive" alt="Thumbnail for Restaurant 88's website."/>
-                  <div class="caption">
-                    <p class="bigger">Restaurant 88 Website</p>
-                    <p>A website for Restaurant 88 and their sister store Banh Mi 88.</p>
-                    <ul class="inline-list">
-                      <li><span class="label">Visual design</span></li>
-                      <li><span class="label">Responsive design</span></li>
-                    </ul>
-                  </div>
-                  <div class="overlay">
-                    <p><span class="sr-only">Find out more about Restaurant 88's website.</span></p>
                   </div>
                 </a>
               </div>
