--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -75,6 +75,13 @@
               <p><img src="../images/daily-ui/005-app-icon.png" onerror="this.src='../images/daily-ui/005-app-icon.jpg'; this.onerror=null;" class="img-responsive" alt="App icon for a fictional app - PawFinder."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>006 - User Profile</h3>
+              <p>User profile for a cat.</p>
+              <p><img src="../images/daily-ui/006-user-profile.png" onerror="this.src='../images/daily-ui/006-user-profile.jpg'; this.onerror=null;" class="img-responsive" alt="User profile for a cat on mobile."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
