--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -81,6 +81,11 @@
               <p>User profile for a cat.</p>
               <p><img src="../images/daily-ui/006-user-profile.png" onerror="this.src='../images/daily-ui/006-user-profile.jpg'; this.onerror=null;" class="img-responsive" alt="User profile for a cat on mobile."/></p>
             </div>
+            <div class="col-6">
+              <h3>007 - Settings</h3>
+              <p>User profile settings.</p>
+              <p><img src="../images/daily-ui/007-settings.png" onerror="this.src='../images/daily-ui/007-settings.jpg'; this.onerror=null;" class="img-responsive" alt="User profile settings."/></p>
+            </div>
           </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
