--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -87,6 +87,13 @@
               <p><img src="../images/daily-ui/007-settings.png" onerror="this.src='../images/daily-ui/007-settings.jpg'; this.onerror=null;" class="img-responsive" alt="User profile settings."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>008 - 404 page</h3>
+              <p>404 page for a fictional website.</p>
+              <p><img src="../images/daily-ui/008-404-page.png" onerror="this.src='../images/daily-ui/008-404-page.jpg'; this.onerror=null;" class="img-responsive" alt="404 page for a fictional website."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
