Removed instances on png images on the daily ui page.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -48,50 +48,50 @@
             <div class="col-6">
               <h3>001 - Sign Up</h3>
               <p>Sign up interface for a fictional video blog app for foodies.</p>
-              <p><img src="../images/daily-ui/001-sign-up.png" onerror="this.src='../images/daily-ui/001-sign-up.jpg'; this.onerror=null;" class="img-responsive" alt="Sign up interface for a fictional video blog app for foodies."/></p>
+              <p><img src="../images/daily-ui/001-sign-up.png" class="img-responsive" alt="Sign up interface for a fictional video blog app for foodies."/></p>
             </div>
             <div class="col-6">
               <h3>002 - Credit Card Checkout</h3>
               <p>Interface for a credit card checkout on a small viewport.</p>
-              <p><img src="../images/daily-ui/002-credit-card-checkout.png" onerror="this.src='../images/daily-ui/002-credit-card-checkout.jpg'; this.onerror=null;" class="img-responsive" alt="Interface for a credit card checkout on a small viewport."/></p>
+              <p><img src="../images/daily-ui/002-credit-card-checkout.png" class="img-responsive" alt="Interface for a credit card checkout on a small viewport."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
               <h3>003 - Landing page (above the fold)</h3>
               <p>Landing page for a fictional website.</p>
-              <p><img src="../images/daily-ui/003-landing-page.png" onerror="this.src='../images/daily-ui/003-landing-page.jpg'; this.onerror=null;" class="img-responsive" alt="Landing page for a fictional website."/></p>
+              <p><img src="../images/daily-ui/003-landing-page.png" class="img-responsive" alt="Landing page for a fictional website."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
               <h3>004 - Calculator</h3>
               <p>Calculator interface for mobile - experimenting with purple and pink.</p>
-              <p><img src="../images/daily-ui/004-calculator.png" onerror="this.src='../images/daily-ui/004-calculator.jpg'; this.onerror=null;" class="img-responsive" alt="Calculator interface for mobile - experimenting with purple and pink."/></p>
+              <p><img src="../images/daily-ui/004-calculator.jpg" class="img-responsive" alt="Calculator interface for mobile - experimenting with purple and pink."/></p>
             </div>
             <div class="col-6">
               <h3>005 - App Icon</h3>
               <p>App icon for a fictional app - PawFinder.</p>
-              <p><img src="../images/daily-ui/005-app-icon.png" onerror="this.src='../images/daily-ui/005-app-icon.jpg'; this.onerror=null;" class="img-responsive" alt="App icon for a fictional app - PawFinder."/></p>
+              <p><img src="../images/daily-ui/005-app-icon.jpg" class="img-responsive" alt="App icon for a fictional app - PawFinder."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-6">
               <h3>006 - User Profile</h3>
               <p>User profile for a cat.</p>
-              <p><img src="../images/daily-ui/006-user-profile.png" onerror="this.src='../images/daily-ui/006-user-profile.jpg'; this.onerror=null;" class="img-responsive" alt="User profile for a cat on mobile."/></p>
+              <p><img src="../images/daily-ui/006-user-profile.jpg" class="img-responsive" alt="User profile for a cat on mobile."/></p>
             </div>
             <div class="col-6">
               <h3>007 - Settings</h3>
               <p>User profile settings.</p>
-              <p><img src="../images/daily-ui/007-settings.png" onerror="this.src='../images/daily-ui/007-settings.jpg'; this.onerror=null;" class="img-responsive" alt="User profile settings."/></p>
+              <p><img src="../images/daily-ui/007-settings.jpg" class="img-responsive" alt="User profile settings."/></p>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
               <h3>008 - 404 page</h3>
               <p>404 page for a fictional website.</p>
-              <p><img src="../images/daily-ui/008-404-page.png" onerror="this.src='../images/daily-ui/008-404-page.jpg'; this.onerror=null;" class="img-responsive" alt="404 page for a fictional website."/></p>
+              <p><img src="../images/daily-ui/008-404-page.jpg" class="img-responsive" alt="404 page for a fictional website."/></p>
             </div>
           </div>
           <p class="biggest">More to come...</p>
