Modified about page.

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>About</h1>
-            <p class="big">Hello, my name is Rosanna Fong. I am a creative individual with a keen interest in web design, user interface design, and user experience design.</p>
+            <p class="big">Hello, my name is Rosanna Fong. I am a creative individual with a keen interest in user interface design and front-end development.</p>
             <!--End introduction-->
           </div>
         </div>
