Modified skill set on the about page.

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>About</h1>
-            <p class="big">Hello, my name is Rosanna Fong. I am a creative individual with a keen interest in web design, user interface design and front-end development.</p>
+            <p class="big">Hello my name is Rosanna. I am a creative individual with a keen interest in web design, user interface design and front-end development. I believe in continuous improvement and am always seeking opportunities to improve myself professionally and personally.</p>
             <!--End introduction-->
           </div>
         </div>
@@ -50,7 +50,7 @@
               <div class="col-6">
                 <p>I have skills in:</p>
                 <ul>
-                  <li>Responsive design</li>
+                  <li>Responsive web design</li>
                   <li>User interface design</li>
                   <li>User experience design</li>
                   <li>Creating wireframes in myBalsamiq</li>
@@ -58,13 +58,13 @@
                   <li>Creating style guides and pattern libraries</li>
                   <li>HTML5, CSS3, and JavaScript</li>
                   <li>Version control with Git</li>
-                  <li>Using web developer tools</li>
+                  <li>Using browser web developer tools</li>
                   <li>Vertical rhythm</li>
                   <li>Using preprocessors such as SASS</li>
                   <li>Google Analytics</li>
-                  <li>Templating using Handlebars.js</li>
-                  <li>Accessibility and knowledge of the New Zealand Government Web Standards</li>
-                  <li>Front-end Frameworks e.g. Bootstrap and Foundation</li>
+                  <li>Templating using Handlebars.js and Liquid</li>
+                  <li>Web accessibility and knowldege of the New Zealand Government Web Standards</li>
+                  <li>Front-end Frameworks e.g. Twitter Bootstrap and Zurb Foundation</li>
                   <li>Cross-browser testing</li>
                   <li>Using Adobe Illustrator and Photoshop</li>
                 </ul>
