Tidied up my about page.

--- a/about.html
+++ b/about.html
@@ -38,7 +38,9 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>About</h1>
-            <p class="big">Hello my name is Rosanna. I am a creative individual with a keen interest in web design, user interface design and front-end development. I believe in continuous improvement and am always seeking opportunities to improve myself professionally and personally.</p>
+            <p class="big">Hello my name is Rosanna. I am a creative individual with skills in visual design, web design, and user interaction design. I am particularly interested in the fields of user interface and user experience design and am translating traditional digital design approaches to try and align it more with these fields.</p>
+
+            <p class="big">I believe in continuous improvement and am always seeking opportunities to improve myself professionally and personally.</p>
             <!--End introduction-->
           </div>
         </div>
@@ -51,22 +53,22 @@
                 <p>I have skills in:</p>
                 <ul>
                   <li>Responsive web design</li>
-                  <li>User interface design</li>
-                  <li>User experience design</li>
+                  <li>Visual design</li>
+                  <li>User interaction design</li>
                   <li>Creating wireframes in myBalsamiq</li>
-                  <li>Designing in Sketch</li>
-                  <li>Creating style guides and pattern libraries</li>
+                  <li>Designing in Bohemian Sketch</li>
+                  <li>Creating and following style guides</li>
                   <li>HTML5, CSS3, and JavaScript</li>
                   <li>Version control with Git</li>
                   <li>Using browser web developer tools</li>
                   <li>Vertical rhythm</li>
                   <li>Using preprocessors such as SASS</li>
                   <li>Google Analytics</li>
-                  <li>Templating using Handlebars.js and Liquid</li>
+                  <li>Using web templates like Handlebars and Liquid</li>
                   <li>Web accessibility and knowldege of the New Zealand Government Web Standards</li>
                   <li>Front-end Frameworks e.g. Twitter Bootstrap and Zurb Foundation</li>
                   <li>Cross-browser testing</li>
-                  <li>Using Adobe Illustrator and Photoshop</li>
+                  <li>Using Adobe Illustrator and Photoshop.</li>
                 </ul>
                 <p>I also like to upskill and try out new tools in my spare time.</p>
               </div>
