--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -94,6 +94,13 @@
               <p><img src="../images/daily-ui/008-404-page.jpg" class="img-responsive" alt="404 page for a fictional website."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>009 - Music player</h3>
+              <p>User interface for a music player.</p>
+              <p><img src="../images/daily-ui/009-music-player.jpg" class="img-responsive" alt="Music player interface."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
