Added daily ui 010, social share.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -100,6 +100,11 @@
               <p>User interface for a music player.</p>
               <p><img src="../images/daily-ui/009-music-player.jpg" class="img-responsive" alt="Music player interface."/></p>
             </div>
+            <div class="col-6">
+              <h3>010 - Social Share</h3>
+              <p>Social share buttons for Twitter, Facebook and Google Plus.</p>
+              <p><img src="../images/daily-ui/010-social-share.jpg" class="img-responsive" alt="Social share buttons for Twitter, Facebook and Google Plus."/></p>
+            </div>
           </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
