Added daily ui 011.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -106,6 +106,13 @@
               <p><img src="../images/daily-ui/010-social-share.jpg" class="img-responsive" alt="Social share buttons for Twitter, Facebook and Google Plus."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>011 - Flash Message (Error/Success)</h3>
+              <p>Error and success messages.</p>
+              <p><img src="../images/daily-ui/011-flash-message.jpg" class="img-responsive" alt="Error and success messages."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
