Added daily ui 012.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -112,6 +112,11 @@
               <p>Error and success messages.</p>
               <p><img src="../images/daily-ui/011-flash-message.jpg" class="img-responsive" alt="Error and success messages."/></p>
             </div>
+            <div class="col-6">
+              <h3>012 - Ecommerce Shop (Single Item)</h3>
+              <p>Single item on an ecommerce shop. Introducing the Pot of Inspiration.</p>
+              <p><img src="../images/daily-ui/012-ecommerce-shop-single-item.jpg" class="img-responsive" alt="Single item on an ecommerce shop. Introducing the Pot of Inspiration.."/></p>
+            </div>
           </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
