--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -113,7 +113,7 @@
               <p><img src="../images/daily-ui/011-flash-message.jpg" class="img-responsive" alt="Error and success messages."/></p>
             </div>
           </div>
-          <div class="row"
+          <div class="row">
             <div class="col-12">
               <h3>012 - Ecommerce Shop (Single Item)</h3>
               <p>Single item on an ecommerce shop. Introducing the Pot of Inspiration.</p>
