--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -107,17 +107,22 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <h3>011 - Flash Message (Error/Success)</h3>
               <p>Error and success messages.</p>
               <p><img src="../images/daily-ui/011-flash-message.jpg" class="img-responsive" alt="Error and success messages."/></p>
             </div>
+            <div class="col-6">
+              <h3>012 - Ecommerce Shop (Single Item)</h3>
+              <p>Single item on an ecommerce shop. Introducing the Pot of Inspiration.</p>
+              <p><img src="../images/daily-ui/012-ecommerce-shop-single-item.jpg" class="img-responsive" alt="Single item on an ecommerce shop. Introducing the Pot of Inspiration."/></p>
+            </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <h3>012 - Ecommerce Shop (Single Item)</h3>
-              <p>Single item on an ecommerce shop. Introducing the Pot of Inspiration.</p>
-              <p><img src="../images/daily-ui/012-ecommerce-shop-single-item.jpg" class="img-responsive" alt="Single item on an ecommerce shop. Introducing the Pot of Inspiration.."/></p>
+              <h3>013 - Direct Messaging</h3>
+              <p>An user interface for direct messaging.</p>
+              <p><img src="../images/daily-ui/013-direct-messaging.jpg" class="img-responsive" alt="An user interface for direct messaging."/></p>
             </div>
           </div>
           <p class="biggest">More to come...</p>
