--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -125,6 +125,13 @@
               <p><img src="../images/daily-ui/013-direct-messaging.jpg" class="img-responsive" alt="An user interface for direct messaging."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>014 - Countdown Timer</h3>
+              <p>A countdown timer for work breaks.</p>
+              <p><img src="../images/daily-ui/014-countdown-timer.jpg" class="img-responsive" alt="A countdown timer for work breaks."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
