--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -131,6 +131,11 @@
               <p>A countdown timer for work breaks.</p>
               <p><img src="../images/daily-ui/014-countdown-timer.jpg" class="img-responsive" alt="A countdown timer for work breaks."/></p>
             </div>
+            <div class="col-6">
+              <h3>015 - On/Off Switch</h3>
+              <p>A simple on/off switch.</p>
+              <p><img src="../images/daily-ui/015-on-off-switch.jpg" class="img-responsive" alt="A simple on/off switch."/></p>
+            </div>
           </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
