--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -137,6 +137,13 @@
               <p><img src="../images/daily-ui/015-on-off-switch.jpg" class="img-responsive" alt="A simple on/off switch."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>016 - Pop-Up / Overlay</h3>
+              <p>Pop-Up / Overlay - Sign Up for ice-cream flavours.</p>
+              <p><img src="../images/daily-ui/016-pop-uo-overlay.jpg" class="img-responsive" alt="Pop-Up / Overlay - Sign Up for ice-cream flavours."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
