--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>About</h1>
-            <p class="big">Hello my name is Rosanna. I am a creative individual with skills in visual design, web design, and user interaction design. I am particularly interested in the fields of user interface and user experience design and am translating traditional digital design approaches to try and align it more with these fields.</p>
+            <p class="big">Hello my name is Rosanna. I am a creative person with skills in visual design, web design, and user interaction design. I am particularly interested in the fields of user interface and user experience design and love collaborating with others to build rich applications.</p>
 
             <p class="big">I believe in continuous improvement and am always seeking opportunities to improve myself professionally and personally.</p>
             <!--End introduction-->
