--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -144,6 +144,13 @@
               <p><img src="../images/daily-ui/016-pop-up-overlay.jpg" class="img-responsive" alt="Pop-Up / Overlay - Sign Up for ice-cream flavours."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>017 - Email Receipt</h3>
+              <p>An email receipt from a fictional store.</p>
+              <p><img src="../images/daily-ui/017-email-receipt.jpg" class="img-responsive" alt="An email receipt from a fictional store."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
