--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -151,6 +151,13 @@
               <p><img src="../images/daily-ui/017-email-receipt.jpg" class="img-responsive" alt="An email receipt from a fictional store."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>018 - Analytics Chart</h3>
+              <p>User interface for displaying analytics.</p>
+              <p><img src="../images/daily-ui/018-analytics-chart.jpg" class="img-responsive" alt="User interface for displaying analytics."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
