--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -155,7 +155,7 @@
             <div class="col-12">
               <h3>018 - Analytics Chart</h3>
               <p>User interface for displaying analytics.</p>
-              <p><img src="../images/daily-ui/018-analytics-chart.jpg" class="img-responsive" alt="User interface for displaying analytics."/></p>
+              <p><img src="../images/daily-ui/018-analytics-chart.jpg" class="img-responsive" alt="User interface for displaying analytics." style="border: 1px solid #ccc;"/></p>
             </div>
           </div>
           <p class="biggest">More to come...</p>
