--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -158,6 +158,13 @@
               <p><img src="../images/daily-ui/018-analytics-chart.jpg" class="img-responsive" alt="User interface for displaying analytics." style="border: 1px solid #ccc;"/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>019 - Leaderboard</h3>
+              <p>Leaderboard for the Big Ocean Swim.</p>
+              <p><img src="../images/daily-ui/019-leaderboard.jpg" class="img-responsive" alt="Leaderboard for the Big Ocean Swim."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
