Fixed daily ui page.

--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -159,12 +159,14 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-12">
               <h3>019 - Leaderboard</h3>
               <p>Leaderboard for the Big Ocean Swim.</p>
               <p><img src="../images/daily-ui/019-leaderboard.jpg" class="img-responsive" alt="Leaderboard for the Big Ocean Swim."/></p>
             </div>
-            <div class="col-6">
+          </div>
+          <div class="row">
+            <div class="col-12">
               <h3>020 - Location Tracker</h3>
               <p>Location Tracker using a fictional map.</p>
               <p><img src="../images/daily-ui/020-location-tracker.jpg" class="img-responsive" alt="Location Tracker using a fictional map."/></p>
