--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -172,6 +172,13 @@
               <p><img src="../images/daily-ui/020-location-tracker.jpg" class="img-responsive" alt="Location Tracker using a fictional map."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>021 - Home Monitoring System</h3>
+              <p>Home Monitoring System for lighting, power and temperature.</p>
+              <p><img src="../images/daily-ui/021-home-monitoring-system.jpg" class="img-responsive" alt="Home Monitoring System for lighting, power and temperature.."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
