--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -176,7 +176,12 @@
             <div class="col-6">
               <h3>021 - Home Monitoring System</h3>
               <p>Home Monitoring System for lighting, power and temperature.</p>
-              <p><img src="../images/daily-ui/021-home-monitoring-system.jpg" class="img-responsive" alt="Home Monitoring System for lighting, power and temperature.."/></p>
+              <p><img src="../images/daily-ui/021-home-monitoring-system.jpg" class="img-responsive" alt="Home Monitoring System for lighting, power and temperature."/></p>
+            </div>
+            <div class="col-6">
+              <h3>022 - Search</h3>
+              <p>Search interface for finding fresh produce.</p>
+              <p><img src="../images/daily-ui/022-search.jpg" class="img-responsive" alt="Search interface for finding fresh produce."/></p>
             </div>
           </div>
           <p class="biggest">More to come...</p>
