--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -184,6 +184,13 @@
               <p><img src="../images/daily-ui/022-search.jpg" class="img-responsive" alt="Search interface for finding fresh produce."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>023 - Onboarding</h3>
+              <p>Onboarding cards for a space game.</p>
+              <p><img src="../images/daily-ui/023-onboarding.jpg" class="img-responsive" alt="Onboarding cards for a space game."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
