--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -191,6 +191,13 @@
               <p><img src="../images/daily-ui/023-onboarding.jpg" class="img-responsive" alt="Onboarding cards for a space game."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>024 - Boarding Pass</h3>
+              <p>Boarding pass design.</p>
+              <p><img src="../images/daily-ui/024-boarding-pass.jpg" class="img-responsive" alt="Boarding pass design."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
