--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -198,6 +198,13 @@
               <p><img src="../images/daily-ui/024-boarding-pass.jpg" class="img-responsive" alt="Boarding pass design."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>025 - TV App</h3>
+              <p>TV App for shows on the Public Domain.</p>
+              <p><img src="../images/daily-ui/025-tv-app.jpg" class="img-responsive" alt="TV App for shows on the Public Domain."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
