--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -205,6 +205,13 @@
               <p><img src="../images/daily-ui/025-tv-app.jpg" class="img-responsive" alt="TV App for shows on the Public Domain."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>026 - Subscribe</h3>
+              <p>Subscribe call-to-action.</p>
+              <p><img src="../images/daily-ui/026-subscribe.jpg" class="img-responsive" alt="Subscribe call-to-action."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
