--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -211,6 +211,11 @@
               <p>Subscribe call-to-action.</p>
               <p><img src="../images/daily-ui/026-subscribe.jpg" class="img-responsive" alt="Subscribe call-to-action."/></p>
             </div>
+            <div class="col-6">
+              <h3>027 - Dropdown</h3>
+              <p>Dropdown menu for meal items.</p>
+              <p><img src="../images/daily-ui/027-dropdown.jpg" class="img-responsive" alt="Dropdown menu for meal items."/></p>
+            </div>
           </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
