--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -224,6 +224,13 @@
               <p><img src="../images/daily-ui/028-contact-us.jpg" class="img-responsive" alt="Contact Us form."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>029 - Map</h3>
+              <p>Visitor map for Underwater World - A fictional marine education centre.</p>
+              <p><img src="../images/daily-ui/029-map.jpg" class="img-responsive" alt="Visitor map for Underwater World - A fictional marine education centre."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
