--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -231,6 +231,13 @@
               <p><img src="../images/daily-ui/029-map.jpg" class="img-responsive" alt="Visitor map for Underwater World - A fictional marine education centre."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>030 - Pricing</h3>
+              <p>Pricing for services.</p>
+              <p><img src="../images/daily-ui/030-pricing.jpg" class="img-responsive" alt="Pricing for services."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
