--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -238,6 +238,13 @@
               <p><img src="../images/daily-ui/030-pricing.jpg" class="img-responsive" alt="Pricing for services."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>031 - File Upload</h3>
+              <p>A simple file upload interface.</p>
+              <p><img src="../images/daily-ui/031-file-upload.jpg" class="img-responsive" alt="A simple file upload interface."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
