--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -239,10 +239,17 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-12">
               <h3>031 - File Upload</h3>
               <p>A simple file upload interface.</p>
               <p><img src="../images/daily-ui/031-file-upload.jpg" class="img-responsive" alt="A simple file upload interface."/></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>032 - Crowdfunding Campaign</h3>
+              <p>Crowdfunding campaign for <em>The humble muffin stand</em>.</p>
+              <p><img src="../images/daily-ui/032-crowdfunding-campaign.jpg" class="img-responsive" alt="Crowdfunding campaign for the humble muffin stand."/></p>
             </div>
           </div>
           <p class="biggest">More to come...</p>
