--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -252,6 +252,13 @@
               <p><img src="../images/daily-ui/032-crowdfunding-campaign.jpg" class="img-responsive" alt="Crowdfunding campaign for the humble muffin stand."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <h3>033 - Customise Product</h3>
+              <p>Customise Product - Woolen Gloves.</p>
+              <p><img src="../images/daily-ui/033-customise-product.jpg" class="img-responsive" alt="Customise product for woolen gloves."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
