--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -253,10 +253,17 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-12">
               <h3>033 - Customise Product</h3>
               <p>Customise Product - Woolen Gloves.</p>
               <p><img src="../images/daily-ui/033-customise-product.jpg" class="img-responsive" alt="Customise product for woolen gloves."/></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>034 - Car Interface</h3>
+              <p>A basic car interface.</p>
+              <p><img src="../images/daily-ui/034-car-interface.jpg" class="img-responsive" alt="A basic car interface."/></p>
             </div>
           </div>
           <p class="biggest">More to come...</p>
