--- a/projects/daily-ui.html
+++ b/projects/daily-ui.html
@@ -266,6 +266,13 @@
               <p><img src="../images/daily-ui/034-car-interface.jpg" class="img-responsive" alt="A basic car interface."/></p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12">
+              <h3>035 - Blog Post</h3>
+              <p>Blog post about a cat's thoughts.</p>
+              <p><img src="../images/daily-ui/035-blog-post.jpg" class="img-responsive" alt="Blog post about a cat's thoughts."/></p>
+            </div>
+          </div>
           <p class="biggest">More to come...</p>
           <!--End main content-->
         </div>
